# rustbar

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  config.json
src/: config.rs  layout.rs  main.rs  workspace.code-workspace
src/modules/: battery.rs  date.rs  hello.rs  hello_world.rs  mod.rs  module.rs  workspace.rs
