[package]
name = "rustbar"
version = "0.1.0"
authors = ["zeroeightsix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
gtk-layer-shell-rs = { path = "gtk-layer-shell-rs/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
json5 = "0.2.7"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
