[package]
name = "rustbar"
version = "0.1.0"
authors = ["zeroeightsix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk-layer-shell-rs = { path = "gtk-layer-shell-rs/" }
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
futures = "0.3.5"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
