[package]
name = "rustbar"
version = "0.1.0"
authors = ["zeroeightsix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk-layer-shell-rs = { path = "gtk-layer-shell-rs/" }
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "time", "sync", "blocking"] }
futures = "0.3.5"
chrono = "0.4.11"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
json5 = "0.2.7"
ksway = "0.1.0"
battery = "0.7.5"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk"
